# pyNeuroGMLM

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py
examples/: glmExample.py  gmlmExample.py  gmlmExample_cpuOnly.py
pyNeuroGMLM/: __init__.py  basisFunctions.py
src/: CMakeLists.txt
src/RCT/: RCTGMLM.py  processData.py
src/pyNeuroGMLM/: __init__.py  basisFunctions.py  pyGMLMhelper.py
src/pyNeuroGMLM/pyGMLMcuda/: CMakeLists.txt  kcGMLMPython.cpp  kcGMLMPython_glm.cpp  kcGMLMPython_glm.hpp  kcGMLMPython_gmlm.hpp
src/pyNeuroGMLM/pyGMLMcuda/kcGMLMcuda/: CMakeLists.txt  kcBase.cu  kcBase.hpp  kcGMLM.cu  kcGMLMPop_computeBlock.cu  kcGMLM_computeBlock.cu
src/pysrc/: CMakeLists.txt
